[package]
name = "epwd-rs"
version = "0.1.9"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Erlang interface to POSIX user database via Rust."
homepage = "https://github.com/nlfiedler/epwd.rs"
repository = "https://github.com/nlfiedler/epwd.rs.git"
readme = "README.md"
keywords = ["POSIX", "user", "database"]
license = "Apache-2.0"

[lib]
name = "epwd_rs"
crate-type = ["cdylib"]

[dependencies.users]
git = "https://github.com/ogham/rust-users.git"
tag = "v0.5.1"

[dependencies]
libc = ">=0.2"
erlang_nif-sys = "0.6.2"
